--- a/CloverPackage/package/Resources/templates/Localizable.strings
+++ b/CloverPackage/package/Resources/templates/Localizable.strings
@@ -211,6 +211,15 @@ Install to /EFI/CLOVER/themes/steampunkblack";
 //"CloverThemeManager_description" = "CloverThemeManager.app by blackosx,
 //keeps your Themes up to date, remove or install them by choosing from a wide selection.
 //Install to /Applications";
+
+// ============================================================================
+// CloverConfigPlistValidator
+// ----------------------------------------------------------------------------
+"CloverConfigPlistValidator_title" = "CloverConfigPlistValidator";
+"CloverConfigPlistValidator_description" = "CloverConfigPlistValidator by jief,
+Verify sanity of your config.plist keeps it clean and up to date.
+Installs to /Applications";
+
 // ============================================================================
 // RC Scripts
 // ----------------------------------------------------------------------------
