--- a/CloverPackage/package/Resources/templates/Localizable.strings
+++ b/CloverPackage/package/Resources/templates/Localizable.strings
@@ -213,12 +213,24 @@ Install to /EFI/CLOVER/themes/steampunkblack";
 //Install to /Applications";
 
 // ============================================================================
+// BootLoaderChooser
+// ----------------------------------------------------------------------------
+"BootLoaderChooser_title" = "BootLoaderChooser";
+"BootLoaderChooser_description" = "BootLoaderChooser by jief,
+This tool is a menu that allows you to choose which bootloader you want to load.
+Will replace your BOOX64.efi, you can choose between Clover and OpenCore.
+The first time, you'll get the menu. Choose one bootloader.
+The next times, it'll immediately load the bootloader you chose before.
+When you need the menu back, just boot your computer with a key pressed.
+More infos https://github.com/jief666/BootloaderChooser. ";
+
+// ============================================================================
 // CloverConfigPlistValidator
 // ----------------------------------------------------------------------------
 "CloverConfigPlistValidator_title" = "CloverConfigPlistValidator";
 "CloverConfigPlistValidator_description" = "CloverConfigPlistValidator by jief,
 Verify sanity of your config.plist keeps it clean and up to date.
-Installs to ";
+Installs to /usr/local/bin and will be available as 'ccpv' ";
 
 // ============================================================================
 // RC Scripts
