--- a/CloverPackage/package/Resources/templates/Localizable.strings
+++ b/CloverPackage/package/Resources/templates/Localizable.strings
@@ -222,6 +222,7 @@ Will replace your BOOTX64.efi, you can choose between several bootloader version
 The first time, you'll get the menu. Choose one bootloader.
 The next times, it'll immediately load the bootloader you chose before.
 When you need the menu back, just boot your computer with a key pressed.
+INSTALL ONLY FROM BUILDME !!!
 INSTALL ONLY IF YOU KNOW WHAT YOU ARE DOING !!!
 More infos https://github.com/jief666/BootloaderChooser. ";
 
