--- a/CloverPackage/package/po/clover.pot
+++ b/CloverPackage/package/po/clover.pot
@@ -6,8 +6,8 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Clover r5160\n"
-"POT-Creation-Date: 2024-09-14 09:44+0300\n"
+"Project-Id-Version: Clover r5163\n"
+"POT-Creation-Date: 2025-09-23 00:10+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -786,13 +786,13 @@ msgstr ""
 #. type: "VBoxExt2.UEFI_description"
 #: Resources/templates/Localizable.strings:171
 #, no-wrap
-msgid "ext2/3 filesystem driver from virtualbox, 64bit"
+msgid "ext2/3 filesystem driver from tianocore, 64bit"
 msgstr ""
 
 #. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
-msgid "ext4 filesystem driver from tianocore, 64bit"
+msgid "ext4 filesystem driver from EDK2-platform, 64bit"
 msgstr ""
 
 #. type: "VBoxHfs.UEFI_description"
